[package]
name = "porovnavac"
version = "1.0.0"
edition = "2021"
description = "Minecraft mod comparator with GUI — scans JAR metadata, creates snapshots, generates changelogs"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
image = { version = "0.25", default-features = false, features = ["ico"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.15"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 2
lto = "thin"
